--- a/appveyor.yml
+++ b/appveyor.yml
@@ -33,24 +33,13 @@ environment:
       MINICONDA: C:\Miniconda36-x64
       CONDA_INSTALL: "numpy"
 
-    - PYTHON: "C:\\Python27"
-      PYTHON_VERSION: "2.7.13"
-      PYTHON_ARCH: "32"
-      MINICONDA: C:\Miniconda
-      CONDA_INSTALL: "numpy"
-
-    - PYTHON: "C:\\Python34"
-      PYTHON_VERSION: "3.6.2"
-      PYTHON_ARCH: "32"
-      MINICONDA: C:\Miniconda36
-      CONDA_INSTALL: "numpy"
-
 install:
   # If there is a newer build queued for the same PR, cancel this one.
   # The AppVeyor 'rollout builds' option is supposed to serve the same
   # purpose but it is problematic because it tends to cancel builds pushed
   # directly to master instead of just PR builds (or the converse).
   # credits: JuliaLang developers.
+  - cinst imagemagick
   - ps: if ($env:APPVEYOR_PULL_REQUEST_NUMBER -and $env:APPVEYOR_BUILD_NUMBER -ne ((Invoke-RestMethod `
         https://ci.appveyor.com/api/projects/$env:APPVEYOR_ACCOUNT_NAME/$env:APPVEYOR_PROJECT_SLUG/history?recordsNumber=50).builds | `
         Where-Object pullRequestId -eq $env:APPVEYOR_PULL_REQUEST_NUMBER)[0].buildNumber) { `
